fix contrast again

--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -13,6 +13,7 @@ footer {
 }
 #logo {
   text-align: center;
+  color: rgb(207, 233, 255);
 }
 header {
   background-color: #000000;
